# vn-market-calendar

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-holidays.yml  auto-merge.yml  ci.yml  dependency-review.yml  labeler.yml  pre-commit-autoupdate.yml  publish.yml  release-please.yml  scorecard.yml  stale.yml
data/: vn_holidays.yaml
examples/: usage.py
scripts/: update_holidays.py
src/vn_market_calendar/: __init__.py  __main__.py  exchanges.py  pandas_helpers.py
tests/: test_cli.py  test_holidays.py  test_pandas.py  test_sessions.py  test_tick_size.py  test_trading_days.py
